# dooers-starter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  dooers.yaml  pyproject.toml  skills.md
.cursor/rules/: dooers-agent.mdc
.cursor/skills/dooers-agent/: SKILL.md
docs/: 00-quickstart.md  01-anatomy.md  02-sdk-contract.md  03-capabilities.md  04-rag.md  05-uploads.md  06-forms.md  07-channels.md  08-deploy.md
docs/recipes/: add-capability.md  deploy-with-dooers-push.md  feedback-form.md  proactive-dispatch.md
docs/superpowers/plans/: 2026-06-24-fix-starter-deploy.md
migrations/: 001_agent_rag.sql  002_knowledge_source_form.sql  003_business_tables.sql
src/: __init__.py  config.py  main.py
src/database/: __init__.py  pool.py
src/modules/agent/: __init__.py  agent.py  agent_config.py  agent_context.py  schemas.py  workflow.py
src/modules/agent/capabilities/: cortex.py  feedback.py  guard.py  recrutamento.py  treinamentos.py
src/modules/channels/: whatsapp_channel.py
src/modules/helpers/: __init__.py  error_messages.py  llm_provider.py  speech.py  wire_content.py
src/modules/llm/: __init__.py  factory.py
src/modules/rag/: __init__.py  archive_storage.py  ingest_filename.py  knowledge_repository.py  knowledge_settings.py  knowledge_settings_hook.py  rag_artifact_keys.py  rag_config.py  service.py
src/modules/services/: constants.py  recrutamento_service.py  supabase_client.py  tally.py  treinamentos_service.py
src/modules/upload/: __init__.py  chat_upload.py  settings_upload.py
(+6 files in other folders)
