[project]
name = "dooers-starter"
version = "0.1.0"
description = "Official starter kit for building Dooers AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "openai>=1.60.0",
    "pydantic-settings>=2.6.0",
    "dooers-agents-server>=0.12.0",
    "python-multipart>=0.0.12",
    "google-cloud-storage>=2.18.0",
    "asyncpg>=0.30.0",
    "openai-agents[litellm]>=0.16.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "azure-core>=1.29.0",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.23.0",
    "poethepoet>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.poe.tasks]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8005"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8005"
check = "ruff check src"
format = "ruff format src"
